--- a/index.html
+++ b/index.html
@@ -39,14 +39,27 @@
 
             <div class="pom-container-settings" id="container-settings">
                 <div class="pom-header">
-                    <div class="pom-blank-setting"></div>
+                    <div class="pom-blank-setting"><p id="title">Settings</p></div>
                     <div class="settings-close"><svg id="settings-close" width="36" height="37" viewBox="0 0 36 37" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6.56424 6.72873L13.5689 16.7287C14.165 17.6243 14.165 18.9675 13.5689 19.8631L6.4152 29.8631C5.37196 31.3556 6.4152 33.2959 8.20362 33.2959H18.0399C19.3813 33.2959 20.5735 32.6989 21.4677 31.5049L29.2176 20.6093C30.2608 19.266 30.2608 17.3257 29.2176 15.9825L21.4677 5.08694C20.7226 3.89291 19.3813 3.2959 18.0399 3.2959H8.35266C6.56424 3.2959 5.52099 5.2362 6.56424 6.72873Z" fill="white"/></svg> </div>
                 </div>
                 <div class="pom-content">
                     <div class="studytime-selector">
-                        
+                        <div class="study-selector">
+                            <div class="stsel-title">Study time: </div>
+                            <div class="stsel-selected">25 min</div>
+                            <div class="stsel-arrow"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="rgb(40, 40, 40)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-down"><path d="m6 9 6 6 6-6"/></svg>
+                              </div>
+                        </div>
+                        <div class="study-options"></div>                        
+                    </div>  
+                    <div class="pausetime-selector">
+                        <div class="pause-selector">
+                            <div class="pssel-title">Pause time: </div>
+                            <div class="pssel-selected">5 min</div>
+                            <div class="pssel-arrow"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="rgb(40, 40, 40)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-down"><path d="m6 9 6 6 6-6"/></svg>
+                              </div>
+                        </div>
                     </div>
-                    <div class="pausetime-selector"></div>
                 </div>
                 <div class="pom-footer">
                     
